Fix issue #27466 in 390: Not possible to manually enter shift or activity lengths when adding extended preferences.
--HG--
branch : Release 7.5.390

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Preference.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Preference.css
@@ -201,6 +201,10 @@ div.qtip-content {
 	height: 5px;
 }
 
+.width85 {
+	width: 85px;
+}
+
 .width131 {
 	width: 131px;
 }
